tests/snapshots/e2e__symbol-mixed-language.snap
---
source: tests/e2e.rs
expression: "run(\"symbol-mixed-language\", &[\"--strict\"])"
---
$ stilltrue --strict
stilltrue: no findings

exit: 0
