tests/snapshots/e2e__version-pin-vs-range.snap
---
source: tests/e2e.rs
expression: "run(\"version-pin-vs-range\", &[])"
---
$ stilltrue 
CLAUDE.md:1:20  rot  Node 18 contradicts `.nvmrc`, which pins 24
                     likely broke in <sha> "upgrade to node 24" · <when>
                     did you mean: Node 24?

stilltrue: 1 rot, 0 lie

exit: 1
